# poe_profiter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: Backend-CI.yml  Frontend-CI.yml
app/: main.py
app/core/: config.py  database.py
app/models/: item.py
app/repositories/: base.py  item.py
app/schemas/: item.py
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: item.py
backend/app/repositories/: base.py  item.py
backend/app/schemas/: item.py
backend/app/services/: poe_trade.py
backend/tests/: conftest.py  test_main.py  test_trade_search.py
backend/tests/models/: test_item.py
backend/tests/repositories/: test_base.py  test_item.py
backend/tests/schemas/: test_item.py
docs/: poe2-trade-api.md  trade-search-wrapper-plan.md
frontend/: .dockerignore  Dockerfile
frontend/poe_profiter/: .prettierignore  index.html  package-lock.json  package.json  poe_profiter_ui.html  vite.config.ts
frontend/poe_profiter/coverage/: clover.xml
frontend/poe_profiter/coverage/lcov-report/: index.html
frontend/poe_profiter/src/: App.tsx  index.css
frontend/poe_profiter/src/components/: DetailsPage.css  DetailsPage.tsx  Header.css  Header.tsx  ItemRow.css  ItemRow.tsx  LoginPage.css  LoginPage.tsx  OverviewPage.css  OverviewPage.tsx  ProfileCard.tsx
frontend/poe_profiter/src/data/: profiles.ts
pr-17/: index.html
pr-25/: index.html
pr-25/assets/: index-CZq9y0GM.js
(+3 files in other folders)
