[project]
name = "poe-profiter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx>=0.27,<0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27,<0.28",
    "ruff>=0.15.8",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
